# surfraw

./: .gitignore  AUTHORS  COPYING  ChangeLog  HACKING  INSTALL  Makefile.am  Makefile.in  Makefile.include  NEWS  README  STYLE  TODO  aclocal.m4  banner  configure  configure.in  elvi.1sr.IN  elvi.1sr.in  links.IN  opensearch-discover  opensearch-genquery  prebuild  surfraw-bash-completion  surfraw-bash-completion.IN  surfraw-update-path.IN  surfraw.1.IN  surfraw.1.in  surfraw.IN  surfraw.bookmarks  surfraw.conf.IN  surfraw.conf.in  surfraw.in  surfraw.lsm.in  surfraw.spec.in
debian/: Makefile.am  Makefile.in  NEWS  README.Debian  changelog  conffiles  config  control  copyright  docs  linda.overrides  postinst  postrm  prerm  rules  rules.save  surfraw-extra.files  surfraw-extra.install  surfraw.1  surfraw.dirs  surfraw.links  templates  templates.IN  watch
debian/po/: de.po  fr.po  templates.pot
elvi/: Makefile.am  Makefile.in  S  W  acronym  ads  alioth  altavista  amazon  appwatch  archpkg  archwiki  arxiv  ask  aur  austlii  bbcnews  bing  bookfinder  britannica  bugmenot  bugzilla  cablesearch  cddb  cia  cisco  cite  cliki  cnn  codesearch  comlaw  commandlinefu  ctan  currency  cve  debbugs  debcodesearch  debcontents  deblists  deblogs  (+112 more)
examples/: Makefile.am  Makefile.in  README  hooks.lua  uzbl_load_url_from_surfraw  uzbl_load_url_from_surfraw.IN
test/: COOKIES  Makefile.am  Makefile.in  README  S.test  W.test  acronym.test  ads.test  alioth.test  altavista.test  amazon.test  archpkg.test  archwiki.test  arxiv.test  ask.test  aur.test  austlii.test  bbcnews.test  bing.test  bookfinder.test  bugmenot.test  bugzilla.test  cablesearch.test  cddb.test  cia.test  cisco.test  cite.test  cliki.test  cnn.test  codesearch.test  comlaw.test  commandlinefu.test  ctan.test  currency.test  cve.test  ddg.test  debbugs.test  debcodesearch.test  debcontents.test  deblists.test  (+105 more)
