# $Id$
elvidir=$(ELVIDIR)

dist_elvi_SCRIPTS	= \
		  S \
		  W \
		  acronym \
		  ads \
		  alioth \
		  amazon \
		  archpkg \
		  archwiki \
		  arxiv \
		  ask \
		  aur \
		  austlii \
		  bing \
		  bbcnews \
		  bookfinder \
		  bugmenot \
		  bugzilla \
		  cablesearch \
		  cia \
		  cisco \
		  cite \
		  cliki \
		  cnn \
		  codesearch \
		  comlaw \
		  ctan \
		  currency \
		  cve \
		  debbugs \
		  debcodesearch \
		  debcontents \
		  deblists \
		  deblogs \
		  debpackages \
		  debpkghome \
		  debpts \
		  debsec \
		  debvcsbrowse \
		  debwiki \
		  deja \
		  deli \
		  discogs \
		  dmoz \
		  duckduckgo \
		  ebay \
		  etym \
		  excite \
		  f5 \
		  foldoc \
		  finkpkg \
		  freebsd \
		  freedb \
		  freshmeat \
		  fsfdir \
		  gcache \
		  genbugs \
		  genportage \
		  github \
		  gutenberg \
		  google \
		  imdb \
		  ixquick \
		  jamendo \
		  javasun \
		  jquery \
		  l1sp \
		  lastfm \
		  leodict \
		  lsm \
		  macports \
		  mathworld \
		  mdn \
		  mininova \
		  musicbrainz \
		  mysqldoc \
		  netbsd \
		  ntrs \
		  openbsd \
		  openports \
		  opensearch \
		  oraclesearch \
		  pasearch \
		  pgdoc \
		  pgpkeys \
		  phpdoc \
		  pin \
		  piratebay \
		  priberam \
		  pubmed \
		  rae \
		  rfc \
		  rhyme \
		  rpmsearch \
		  scholar \
		  scicom \
		  scitopia \
		  scirus \
		  scpan \
		  slashdot \
		  slinuxdoc \
		  sourceforge \
		  springer \
		  stack \
		  stockquote \
		  thesaurus \
		  translate \
		  urban \
		  w3css \
		  w3html \
		  w3link \
		  w3rdf \
		  wayback \
		  webster \
		  wetandwild \
		  wikipedia \
		  woffle \
		  wolfram \
		  worldwidescience \
		  yacy \
		  yahoo \
		  yandex \
		  youtube \
		  yubnub

uninstall-local:
	-rmdir $(DESTDIR)$(PREFIX)/$(ELVIDIR)
